fix bar cell alignment

--- a/app/src/styles/hrc-table.css
+++ b/app/src/styles/hrc-table.css
@@ -365,7 +365,7 @@
     text-align: left;
     display: inline;
     position: absolute;
-    top: 3px;
+    top: 2px;
 }
 
 
